--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -12,18 +12,18 @@ server {
 {% endif %}
 
 server {
-    {% if stage != "production" %}
+{% if stage != "production" %}
     listen       80;
     listen  [::]:80; {# ipv6 #}
-    {% endif %}
-    {% if stage == "production" %}
+{% endif %}
+{% if stage == "production" %}
     listen       443 ssl http2;
     listen  [::]:443 ssl http2; {# ipv6 #}
-    {% endif %}
+{% endif %}
 
     server_name  {{ nextcloud_fqdn }};
 
-    {% if stage == "production" -%}
+{% if stage == "production" -%}
     ssl_certificate {{ nginx_ssl_path }}/letsencrypt/{{ nextcloud_fqdn }}-bundled.cert;
     ssl_certificate_key {{ nginx_ssl_path }}/letsencrypt/{{ nextcloud_fqdn }}.key;
 
@@ -36,7 +36,7 @@ server {
 
     # HSTS (ngx_http_headers_module is required) (15768000 seconds = 6 months)
     add_header Strict-Transport-Security max-age=15768000;
-    {% endif %}
+{% endif %}
 
     # Specify a charset
     charset utf-8;
@@ -61,7 +61,7 @@ server {
     underscores_in_headers on;
 
     # Prevent clients from accessing to backup/config/source files
-    location ~* (?:\.(?:bak|conf|dist|fla|in[ci]|log|sw[op])|~)$ {
+    location ~* (?:\.(?:bak|conf|dist|fla|in[ci]|sw[op])|~)$ {
       deny all;
     }
 
@@ -76,12 +76,14 @@ server {
     location / {
         proxy_headers_hash_max_size 512;
         proxy_headers_hash_bucket_size 64;
+        proxy_http_version 1.1;
+        
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        # add_header Front-End-Https on;
+        proxy_read_timeout 300;
 
         # whatever the IP of your cloud server is
         proxy_pass http://{{ nextcloud_docker_ip }}:{{ nextcloud_port }};
