--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -44,12 +44,12 @@ RUN set -ex; \
     rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p \
-    /usr/share/man/man1 \
     /var/log/supervisord \
     /var/run/supervisord \
 ;
 
-COPY supervisord.conf /etc/supervisor/supervisord.conf
+COPY supervisord.conf /
+
 COPY nextcloud.config.php /usr/src/nextcloud/config/nextcloud.config.php
 COPY apache-pretty-urls.config.php /usr/src/nextcloud/config/apache-pretty-urls.config.php
 COPY apcu.config.php /usr/src/nextcloud/config/apcu.config.php
@@ -62,4 +62,4 @@ COPY skeletonfiles.config.php /usr/src/nextcloud/config/skeletonfiles.config.php
 
 ENV NEXTCLOUD_UPDATE=1
 
-CMD ["/usr/bin/supervisord"]
+CMD ["/usr/bin/supervisord", "-c", "/supervisord.conf"]
