--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -58,7 +58,7 @@ server {
 
     underscores_in_headers on;
 
-    # Prevent clients from accessing to backup/config/source files
+    # Prevent clients from accessing backup/config/source files
     location ~* (?:\.(?:bak|conf|dist|fla|in[ci]|sw[op])|~)$ {
       deny all;
     }
@@ -75,7 +75,7 @@ server {
         proxy_headers_hash_max_size 512;
         proxy_headers_hash_bucket_size 64;
         proxy_http_version 1.1;
-        
+
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
