--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -2,24 +2,24 @@
 
 {% if stage == "production" -%}
 server {
+    listen      80;
     listen [::]:80;
-    listen 80;
 
     server_name  {{ nextcloud_fqdn }};
 
     return 301 https://{{ nextcloud_fqdn }}$request_uri;
 }
-{% endif %}
+{% endif -%}
 
 server {
-{% if stage != "production" %}
+{% if stage != "production" -%}
     listen       80;
-    listen  [::]:80; {# ipv6 #}
-{% endif %}
-{% if stage == "production" %}
+    listen  [::]:80;
+{% endif -%}
+{% if stage == "production" -%}
     listen       443 ssl http2;
-    listen  [::]:443 ssl http2; {# ipv6 #}
-{% endif %}
+    listen  [::]:443 ssl http2;
+{% endif -%}
 
     server_name  {{ nextcloud_fqdn }};
 
@@ -34,7 +34,7 @@ server {
 
     # HSTS (ngx_http_headers_module is required) (15768000 seconds = 6 months)
     add_header Strict-Transport-Security max-age=15768000;
-{% endif %}
+{% endif -%}
 
     # Specify a charset
     charset utf-8;
@@ -83,7 +83,6 @@ server {
 
         proxy_read_timeout 300;
 
-        # whatever the IP of your cloud server is
-        proxy_pass http://{{ nextcloud_docker_ip }}:{{ nextcloud_port }};
+        proxy_pass http://{{ nextcloud_private_ipv4 }}:{{ nextcloud_port }};
     }
 }
